products/devex/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devex
  namespace: devex
  labels:
    "app.kubernetes.io/name": "devex"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "devex"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "devex"
    spec:
      containers:
        - image: devex
          name: devex
          ports:
            - containerPort: 80
