products/devex/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devex
  namespace: devex
  labels:
    "app.kubernetes.io/name": "devex"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex
                port:
                  number: 80
    - host: dev-devex.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex
                port:
                  number: 80
